@@ -17,8 +17,11 @@
     <basepom.check.skip-prettier>false</basepom.check.skip-prettier>
 
     <dep.javassist.version>3.24.1-GA</dep.javassist.version>
-
     <dep.plugin.jacoco.version>0.8.3</dep.plugin.jacoco.version>
+
+    <basepom.test.add.opens>
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+    </basepom.test.add.opens>
   </properties>
 
   <dependencyManagement>
@@ -258,6 +261,13 @@
           </ignoredClassPatterns>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>@{argLine} ${basepom.test.add.opens}</argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -278,7 +288,7 @@
     <connection>scm:git:git@github.com:HubSpot/jinjava.git</connection>
     <developerConnection>scm:git:git@github.com:HubSpot/jinjava.git</developerConnection>
     <url>git@github.com:HubSpot/jinjava.git</url>
-    <tag>HEAD</tag>
+    <tag>HEAD$</tag>
   </scm>
 
   <profiles>
